--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </nav>
     </header>
     <main>
+        <img src="lehigh-university.jpg" alt="Lehigh University">
         <section id="latest-scores">
             <h2>Latest Scores</h2>
             <p>Lehigh vs. Team A: 2-1</p>
@@ -33,7 +34,9 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Lehigh University Men's Soccer Team</p>
+        <p><a href="https://lehighsports.com/" target="_blank">Lehigh University Athletics Page</a></p>
+        <p>Student-based website run</p>
+        <p>Creator: Andre Escobedo '25</p>
     </footer>
 </body>
 </html>
