--- a/roster.html
+++ b/roster.html
@@ -18,18 +18,33 @@
         </nav>
     </header>
     <main>
-        <section id="roster">
+        <section id="roster" class="roster">
             <h2>Team Roster</h2>
-            <ul>
-                <li>Player 1 - Position</li>
-                <li>Player 2 - Position</li>
-                <li>Player 3 - Position</li>
-                <!-- Add more players as needed -->
-            </ul>
+            <div class="player">
+                <img src="player1.jpg" alt="Player 1">
+                <div>
+                    <h3>Player 1</h3>
+                    <p>Position: Forward</p>
+                    <p>Number: 10</p>
+                    <p>Bio: Player 1's bio goes here.</p>
+                </div>
+            </div>
+            <div class="player">
+                <img src="player2.jpg" alt="Player 2">
+                <div>
+                    <h3>Player 2</h3>
+                    <p>Position: Midfielder</p>
+                    <p>Number: 8</p>
+                    <p>Bio: Player 2's bio goes here.</p>
+                </div>
+            </div>
+            <!-- Add more players as needed -->
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Lehigh University Men's Soccer Team</p>
+        <p><a href="https://lehighsports.com/" target="_blank">Lehigh University Athletics Page</a></p>
+        <p>Student-based website run</p>
+        <p>Creator: Andre Escobedo '25</p>
     </footer>
 </body>
 </html>
