--- a/schedule.html
+++ b/schedule.html
@@ -18,18 +18,42 @@
         </nav>
     </header>
     <main>
-        <section id="schedule">
+        <section id="schedule" class="schedule">
             <h2>Match Schedule</h2>
-            <ul>
-                <li>Match 1: Date - Opponent</li>
-                <li>Match 2: Date - Opponent</li>
-                <li>Match 3: Date - Opponent</li>
-                <!-- Add more matches as needed -->
-            </ul>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Opponent</th>
+                        <th>Location</th>
+                        <th>Time</th>
+                        <th>Score</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2024-05-01</td>
+                        <td>Team A</td>
+                        <td>Home</td>
+                        <td>10:00 AM</td>
+                        <td>2-1</td>
+                    </tr>
+                    <tr>
+                        <td>2024-05-08</td>
+                        <td>Team B</td>
+                        <td>Away</td>
+                        <td>1:00 PM</td>
+                        <td>1-3</td>
+                    </tr>
+                    <!-- Add more matches as needed -->
+                </tbody>
+            </table>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Lehigh University Men's Soccer Team</p>
+        <p><a href="https://lehighsports.com/" target="_blank">Lehigh University Athletics Page</a></p>
+        <p>Student-based website run</p>
+        <p>Creator: Andre Escobedo '25</p>
     </footer>
 </body>
 </html>
