--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Lehigh University Men's Soccer Team</h1>
+        <h1>Lehigh University Men's Club Soccer Team</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
